--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,14 @@
 spring:
   application:
     name: user-service
+  h2:
+    console:
+      enabled: true
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:tcp:localhost/~/springcloudmsa
+    username: sa
+    password:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
