Spring cloud MSA - UserEntiy, UserDto, UserService, UserRepository 추가 및 Mapstruct 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,10 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  jpa:
+    hibernate:
+      ddl-auto: create
+    open-in-view: false
 
 
 server:
