--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     hibernate:
       ddl-auto: create-drop
     open-in-view: false
-
+    show-sql: true
 
 server:
   port: 0  #Random Port
